# slc.pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: precommit.yml
src/slc/pre_commit/: check_po.py
