[metadata]
name = slc.pre_commit
version = 1.0
description = Some hooks for pre-commit.

[options]
packages = find:
package_dir =
    = src
install_requires =
    python-gettext

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-po = slc.pre_commit.check_po:main
