[metadata]
name = slc.pre_commit
version = 1.0
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/syslabcom/slc.pre-commit
author = Manuel Reinhardt
author_email = reinhardt@syslab.com
license = GPL
license_files = LICENSE
classifies =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
install_requires =
    python-gettext

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-po = slc.pre_commit.check_po:main

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
known_future_library = "future,pies"
lines_after_imports = 2
line_length = 88
not_skip = __init__.py

[flake8]
exclude = bootstrap.py,docs,*.egg.,omelette
max-complexity = 15
max-line-length = 88
ignore = E203,W503,W504,Q000,C812,C901,T000
